tests/fixtures/compile_errors/numeric_capacity_mismatch/u64_neg.fe
contract Foo:
    pub def bar() -> u64:
        return u64(-1)